--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "express": "4.16.3",
     "express-validator": "5.2.0",
     "jsonwebtoken": "8.2.1",
-    "mongoose": "5.0.17"
+    "mongoose": "5.0.17",
+    "nconf": "0.10.0"
   },
   "devDependencies": {
     "debug": "3.1.0"
+  },
+  "engines": {
+    "node": "10.0.0"
   }
 }
