--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express-validator": "5.2.0",
     "jsonwebtoken": "8.2.1",
     "mongoose": "5.0.17",
+    "morgan": "1.9.0",
     "nconf": "0.10.0",
+    "randomstring": "1.1.5",
     "validator": "10.2.0"
   },
   "devDependencies": {
