--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "1.18.2",
     "express": "4.16.3",
     "express-validator": "5.2.0",
+    "firebase-admin": "5.12.1",
     "jsonwebtoken": "8.2.1",
     "mongoose": "5.0.17",
     "morgan": "1.9.0",
