--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-validator": "5.2.0",
     "firebase-admin": "5.12.1",
     "jsonwebtoken": "8.2.1",
+    "lodash": "4.17.10",
     "mongoose": "5.0.17",
     "morgan": "1.9.0",
     "nconf": "0.10.0",
