--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "0.18.0",
     "bcrypt": "2.0.1",
     "body-parser": "1.18.2",
+    "cors": "2.8.4",
     "express": "4.16.3",
     "express-validator": "5.2.0",
     "firebase-admin": "5.12.1",
