--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "2.0.1",
     "body-parser": "1.18.2",
     "cors": "2.8.4",
+    "cron": "1.3.0",
     "express": "4.16.3",
     "express-validator": "5.2.0",
     "firebase-admin": "5.12.1",
