--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "4.16.3",
     "express-validator": "5.2.0",
     "firebase-admin": "5.12.1",
+    "helmet": "3.12.1",
     "jsonwebtoken": "8.2.1",
     "lodash": "4.17.10",
     "mongoose": "5.0.17",
