--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "chai": "4.1.2",
     "debug": "3.1.0",
+    "nodemon": "1.17.5",
     "mocha": "5.2.0"
   },
   "engines": {
