--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
   "devDependencies": {
     "chai": "4.1.2",
     "debug": "3.1.0",
-    "nodemon": "1.17.5",
-    "mocha": "5.2.0"
+    "eslint": "5.1.0",
+    "eslint-config-google": "0.9.1",
+    "mocha": "5.2.0",
+    "nodemon": "1.17.5"
   },
   "engines": {
     "node": ">=7.6.0"
