--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "debug": "3.1.0",
     "eslint": "5.1.0",
     "eslint-config-google": "0.9.1",
+    "faker": "4.1.0",
     "mocha": "5.2.0",
     "nodemon": "1.17.5",
     "supertest": "3.3.0"
