--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "set NODE_ENV=test && mocha ./tests --recursive --exit",
+    "test:coverage": "nyc  --reporter=lcov --reporter=text-lcov npm test",
     "start": "node ./src/config/www.js",
     "linter": "./node_modules/.bin/eslint ./src",
     "linter:fix": "./node_modules/.bin/eslint ./src --fix"
@@ -46,6 +47,7 @@
     "faker": "4.1.0",
     "mocha": "5.2.0",
     "nodemon": "1.17.5",
+    "nyc": "13.0.1",
     "supertest": "3.3.0"
   },
   "engines": {
