--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,8 +48,8 @@ docker:
   variables:
     CONTAINER_TEST_IMAGE: gcr.io/findme4-209120/eventine
   script:
-    - echo "$GOOGLE_KEY_SECRET" > key.json # Google Cloud service accounts
-    - gcloud auth activate-service-account --key-file key.json
+    - echo "$GOOGLE_KEY_SECRET" > findme4-209120-6cfa6ca86363.json # Google Cloud service accounts
+    - gcloud auth activate-service-account --key-file findme4-209120-6cfa6ca86363.json
     - gcloud config set project findme4-209120
     - gcloud container builds submit -t $CONTAINER_TEST_IMAGE .
 
