--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,12 +42,10 @@ test:
 
 docker:
   stage: build
-  image: docker:dind
+  image: alpine:latest
   services:
     - docker:dind
   variables:
-    DOCKER_DRIVER: overlay
-    DOCKER_HOST: tcp://127.0.0.1:2375
     CONTAINER_TEST_IMAGE: gcr.io/findme4-209120/eventine
   script:
     - docker build -t eventine:latest -f ./docker/Dockerfile .
