--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,8 @@ docker:
     - docker:dind
   variables:
     CONTAINER_TEST_IMAGE: gcr.io/findme4-209120/eventine
+    DOCKER_HOST: tcp://localhost:2375
+    DOCKER_DRIVER: overlay2
   script:
     - docker build -t eventine:latest -f ./docker/Dockerfile .
     - docker tag eventine:latest ${CONTAINER_TEST_IMAGE}
