--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,9 +42,7 @@ test:
 
 docker:
   stage: build
-  image: alpine:latest
-  services:
-    - docker:dind
+  image: docker:dind
   variables:
     CONTAINER_TEST_IMAGE: gcr.io/findme4-209120/eventine
     DOCKER_HOST: tcp://localhost:2375
