Trying to fix GCE integration

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,12 +45,14 @@ docker:
   image: docker:stable
   services:
     - docker:stable-dind
+    - google/cloud-sdk:latest
   variables:
     CONTAINER_TEST_IMAGE: gcr.io/findme4-209120/eventine
     DOCKER_DRIVER: overlay2
   script:
     - docker build -t eventine:latest -f ./docker/Dockerfile .
     - docker tag eventine:latest ${CONTAINER_TEST_IMAGE}
-    - docker login -u _json_key --password-stdin https://eu.gcr.io < findme4-209120-f13531932f36.json
-    - docker push ${CONTAINER_TEST_IMAGE}
+    - gcloud auth activate-service-account --key-file findme4-209120-f13531932f36.json
+    - gcloud config set project findme4-209120
+    - gcloud docker -- push ${CONTAINER_TEST_IMAGE}
 
