CD only for master, working on branches since now

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,3 +53,5 @@ docker:
     - docker tag eventine:latest ${CONTAINER_TEST_IMAGE}
     - docker login -u _json_key -p "$(cat findme4-209120-f13531932f36.json)" https://gcr.io
     - docker push ${CONTAINER_TEST_IMAGE}
+  only:
+    - master
