--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/dragt12/KalejdoskopApp#readme",
   "dependencies": {
+    "axios": "0.18.0",
     "bcrypt": "2.0.1",
     "body-parser": "1.18.2",
     "cors": "2.8.4",
@@ -35,6 +36,7 @@
     "morgan": "1.9.0",
     "nconf": "0.10.0",
     "randomstring": "1.1.5",
+    "redis": "2.8.0",
     "validator": "10.2.0"
   },
   "devDependencies": {
