--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "nconf": "0.10.0",
     "randomstring": "1.1.5",
     "redis": "2.8.0",
-    "validator": "10.2.0"
+    "validator": "10.2.0",
+    "mocha": "5.2.0"
   },
   "devDependencies": {
     "chai": "4.1.2",
@@ -45,7 +46,6 @@
     "eslint": "5.1.0",
     "eslint-config-google": "0.9.1",
     "faker": "4.1.0",
-    "mocha": "5.2.0",
     "nodemon": "1.17.5",
     "nyc": "13.0.1",
     "supertest": "3.3.0"
