--- a/kubernetes/production/ingress.yaml
+++ b/kubernetes/production/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
     kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
 spec:
   rules:
+  - host: hello.back-eventine.pl # CHANGE ME!
     http:
       paths:
       # The * is needed so that all traffic gets redirected to nginx
