--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "randomstring": "1.1.5",
     "redis": "2.8.0",
     "validator": "10.2.0",
-    "mocha": "5.2.0"
+    "mocha": "^5.2.0"
   },
   "devDependencies": {
     "chai": "4.1.2",
