--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ docker:
     - docker:stable-dind
   variables:
     CONTAINER_TEST_IMAGE: gcr.io/findme4-209120/eventine
-    DOCKER_DRIVER: overlay2
+    DOCKER_DRIVER: overlay
   script:
     - docker build -t eventine:latest -f ./docker/Dockerfile .
     - docker tag eventine:latest ${CONTAINER_TEST_IMAGE}
