--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,8 +49,9 @@ docker:
     - docker:stable-dind
   variables:
     CONTAINER_TEST_IMAGE: gcr.io/findme4-209120/eventine
-    DOCKER_DRIVER: overlay
+    DOCKER_DRIVER: overlay2
   script:
+    - npm install
     - docker build -t eventine:latest -f ./docker/Dockerfile .
     - docker tag eventine:latest ${CONTAINER_TEST_IMAGE}
     - docker login -u _json_key -p "$(cat findme4-209120-f13531932f36.json)" https://gcr.io
