--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
     "helmet": "3.12.1",
     "jsonwebtoken": "8.2.1",
     "lodash": "4.17.10",
+    "mocha": "^5.2.0",
     "mongoose": "5.0.17",
     "morgan": "1.9.0",
     "nconf": "0.10.0",
     "randomstring": "1.1.5",
     "redis": "2.8.0",
     "validator": "10.2.0",
-    "mocha": "^5.2.0"
+    "winston-loggly-bulk": "^2.0.3"
   },
   "devDependencies": {
     "chai": "4.1.2",
