--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "set NODE_ENV=test && mocha ./tests --recursive --exit",
     "test:coverage": "nyc  --reporter=lcov --reporter=text-lcov npm test",
     "start": "node ./src/config/www.js",
-    "linter": "./node_modules/.bin/eslint ./src",
-    "linter:fix": "./node_modules/.bin/eslint ./src --fix"
+    "lint": "./node_modules/.bin/eslint ./src",
+    "lint:fix": "./node_modules/.bin/eslint ./src --fix"
   },
   "repository": {
     "type": "git",
@@ -26,15 +26,16 @@
     "bcrypt": "2.0.1",
     "body-parser": "1.18.2",
     "cors": "2.8.4",
+    "dotenv": "^7.0.0",
     "express": "4.16.3",
     "express-validator": "5.2.0",
     "firebase-admin": "5.12.1",
     "helmet": "3.12.1",
     "jsonwebtoken": "8.2.1",
-    "lodash": "4.17.10",
+    "lodash": "^4.17.11",
     "mocha": "^5.2.0",
-    "mongoose": "5.0.17",
-    "morgan": "1.9.0",
+    "mongoose": "^5.4.20",
+    "morgan": "^1.9.1",
     "nconf": "0.10.0",
     "randomstring": "1.1.5",
     "redis": "2.8.0",
@@ -44,11 +45,11 @@
   "devDependencies": {
     "chai": "4.1.2",
     "debug": "3.1.0",
-    "eslint": "5.1.0",
+    "eslint": "^5.16.0",
     "eslint-config-google": "0.9.1",
     "faker": "4.1.0",
     "nodemon": "1.17.5",
-    "nyc": "13.0.1",
+    "nyc": "^13.3.0",
     "supertest": "3.3.0"
   },
   "engines": {
