fix(CI): last minor fix

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ install_dependencies:
 test:
   stage: test
   variables:
-    NODE_ENV: test
+    NODE_ENV: CI
   services:
     - mongo:latest
   script: 
