--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-FIREBASE_PRIVATE_KEY="INSERT .JSON FIREBASE FILE HERE"
+FIREBASE_PRIVATE_KEY="kalejdoskopapp-firebase-adminsdk-fjud1-e541b604e8.json"
