--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-validator": "5.2.0",
     "firebase-admin": "5.12.1",
     "helmet": "3.12.1",
+    "ioredis": "^4.10.0",
     "jsonwebtoken": "8.2.1",
     "lodash": "^4.17.11",
     "mocha": "^5.2.0",
@@ -38,7 +39,6 @@
     "morgan": "^1.9.1",
     "nconf": "0.10.0",
     "randomstring": "1.1.5",
-    "redis": "2.8.0",
     "validator": "10.2.0",
     "winston-loggly-bulk": "^2.0.3"
   },
